Restore CSV E2E and safety lanes (#3)
* Restore CSV E2E, native, and telemetry safety coverage

* Update .github/workflows/e2e-safety.yml

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>